[gd_scene load_steps=5 format=2]

[ext_resource path="res://world/cargo_hold/time_skip.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Up:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Down:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("Up:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Down:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, -1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("Up:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Down:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, -1 ), Vector2( 1, 1e-05 ) ]
}

[node name="TimeSkip" type="Control"]
pause_mode = 2
margin_right = 1280.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/close = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="Up" type="Polygon2D" parent="."]
scale = Vector2( 1, 1e-05 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 360, 1280, 360, 1280, 0, 0, 0 )

[node name="Down" type="Polygon2D" parent="."]
position = Vector2( 0, 720 )
scale = Vector2( 1, 1e-05 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 360, 1280, 360, 1280, 0, 0, 0 )

[node name="SleepTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="animation_finished" from="Animator" to="." method="_on_Animator_animation_finished"]
[connection signal="timeout" from="SleepTimer" to="." method="_on_SleepTimer_timeout"]
